Fix nav alignment: remove forced offset, allow flex wrap

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -22,10 +22,6 @@
     padding: .5em 2em;
     font-family: $sans-serif-narrow;
 
-    @include breakpoint($large) {
-      padding-left: calc(16.67% + 2em);
-    }
-
     @include breakpoint($x-large) {
       max-width: $x-large;
     }
