--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -207,6 +207,7 @@
   .visible-links {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     li {
       white-space: nowrap;
